cmake_minimum_required(VERSION 3.30)
project(Practica_Contenedores1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Practica_Contenedores1
    LICENSE
    README.md
        src/VideoJuego.h
        src/VideoJuego.h
        src/VideoJuego.h
        src/VideoJuego.cpp
        src/Jugador.h
        src/Jugador.cpp
        src/Torneo.cpp
        src/Torneo.h)
